added inner and outer metalearning loops

--- a/settings.ini
+++ b/settings.ini
@@ -38,6 +38,6 @@ status = 3
 user = Anil Radhakrishnan
 
 ### Optional ###
-# requirements = fastcore pandas
+requirements = fastcore pandas numpy matplotlib seaborn jax jaxlib equinox optax tqdm
 # dev_requirements = 
 # console_scripts =
