nbdev settings update

--- a/settings.ini
+++ b/settings.ini
@@ -6,9 +6,9 @@
 repo = jaxDiversity
 lib_name = %(repo)s
 version = 0.0.1
-min_python = 3.7
+min_python = 3.10
 license = apache2
-black_formatting = False
+black_formatting = True
 
 ### nbdev ###
 doc_path = _docs
@@ -21,9 +21,9 @@ put_version_in_init = True
 ### Docs ###
 branch = main
 custom_sidebar = False
-doc_host = https://%(user)s.github.io
+doc_host = https://NonlinearArtificialIntelligenceLabs.github.io
 doc_baseurl = /%(repo)s
-git_url = https://github.com/%(user)s/%(repo)s
+git_url = https://github.com/NonlinearArtificialIntelligenceLab/%(repo)s
 title = %(lib_name)s
 
 ### PyPI ###
