--- a/nbs/nbdev.yml
+++ b/nbs/nbdev.yml
@@ -3,7 +3,7 @@ project:
 
 website:
   title: "jaxDiversity"
-  site-url: "https://Anil Radhakrishnan.github.io/jaxDiversity"
+  site-url: "https://NonlinearArtificialIntelligenceLab.github.io/jaxDiversity"
   description: "jax implementation for metalearning neuronal diversity"
   repo-branch: main
-  repo-url: "https://github.com/Anil Radhakrishnan/jaxDiversity"
+  repo-url: "https://github.com/NonlinearArtificialIntelligenceLab/jaxDiversity"
