--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,5 +3,6 @@ on:  [workflow_dispatch, pull_request, push]
 
 jobs:
   test:
+    if: always()
     runs-on: ubuntu-latest
     steps: [uses: fastai/workflows/nbdev-ci@master]
