trying to get actions to work

--- a/settings.ini
+++ b/settings.ini
@@ -6,9 +6,9 @@
 repo = jaxDiversity
 lib_name = %(repo)s
 version = 0.0.1
-min_python = 3.10
+min_python = 3.9
 license = apache2
-black_formatting = True
+black_formatting = False
 
 ### nbdev ###
 doc_path = _docs
@@ -28,16 +28,17 @@ title = %(lib_name)s
 
 ### PyPI ###
 audience = Developers
-author = NonlinearArtificialIntelligenceLab
+author = Anil Radhakrishnan
 author_email = aradhak5@ncsu.edu
 copyright = 2023 onwards, %(author)s
 description = jax implementation for metalearning neuronal diversity
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
-user = Anil Radhakrishnan
+user = NonlinearArtificialIntelligenceLab
 
 ### Optional ###
-requirements = fastcore pandas numpy matplotlib seaborn jax jaxlib equinox optax tqdm
+requirements = fastcore pandas matplotlib seaborn jax jaxlib equinox optax tqdm
+console_scripts = nbdev_export=nbdev.cli:nbdev_export
 # dev_requirements = 
 # console_scripts =
