--- a/settings.ini
+++ b/settings.ini
@@ -38,7 +38,7 @@ status = 3
 user = NonlinearArtificialIntelligenceLab
 
 ### Optional ###
-requirements = nbdev>=2.3 jax>=0.4 jaxlib>=0.4 optax>=0.1 equinox>=0.10 fastcore>=1.5 matplotlib>=3.7 pandas>=1.5 torch seaborn>=0.12 tqdm>=4.65  
+requirements = nbdev jax jaxlib optax equinox fastcore matplotlib pandas torch seaborn tqdm
 
 console_scripts = nbdev_export=nbdev.cli:nbdev_export
 # dev_requirements = 
