--- a/settings.ini
+++ b/settings.ini
@@ -1,45 +1,37 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified.
-# See https://github.com/fastai/nbdev/blob/master/settings.ini for examples.
-
-### Python library ###
 repo = jaxDiversity
-lib_name = %(repo)s
-version = 0.0.1
+lib_name = jaxDiversity
+version = 0.0.2
 min_python = 3.9
 license = apache2
-black_formatting = False
-
-### nbdev ###
+black_formatting = True
 doc_path = _docs
 lib_path = jaxDiversity
 nbs_path = nbs
 recursive = True
 tst_flags = notest
 put_version_in_init = True
-
-### Docs ###
 branch = main
 custom_sidebar = False
 doc_host = https://NonlinearArtificialIntelligenceLabs.github.io
-doc_baseurl = /%(repo)s
-git_url = https://github.com/NonlinearArtificialIntelligenceLab/%(repo)s
-title = %(lib_name)s
-
-### PyPI ###
+doc_baseurl = /jaxDiversity
+git_url = https://github.com/NonlinearArtificialIntelligenceLab/jaxDiversity
+title = jaxDiversity
 audience = Developers
 author = Anil Radhakrishnan
 author_email = aradhak5@ncsu.edu
-copyright = 2023 onwards, %(author)s
+copyright = 2023 onwards, Anil Radhakrishnan
 description = jax implementation for metalearning neuronal diversity
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = NonlinearArtificialIntelligenceLab
-
-### Optional ###
 requirements = nbdev jax jaxlib optax equinox fastcore matplotlib pandas torch seaborn tqdm
-
 console_scripts = nbdev_export=nbdev.cli:nbdev_export
-# dev_requirements = 
-# console_scripts =
+readme_nb = index.ipynb
+allowed_metadata_keys = 
+allowed_cell_metadata_keys = 
+jupyter_hooks = True
+clean_ids = True
+clear_all = False
+
