added black formatting

--- a/settings.ini
+++ b/settings.ini
@@ -26,7 +26,7 @@ keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = NonlinearArtificialIntelligenceLab
-requirements = nbdev jax jaxlib optax equinox fastcore matplotlib pandas torch seaborn tqdm
+requirements = nbdev jax jaxlib optax equinox fastcore matplotlib pandas torch seaborn tqdm black
 console_scripts = nbdev_export=nbdev.cli:nbdev_export
 readme_nb = index.ipynb
 allowed_metadata_keys = 
