github workflow changes

--- a/settings.ini
+++ b/settings.ini
@@ -2,7 +2,7 @@
 repo = jaxDiversity
 lib_name = jaxDiversity
 version = 0.0.2
-min_python = 3.9
+min_python = 3.10
 license = apache2
 black_formatting = True
 doc_path = _docs
@@ -22,11 +22,11 @@ author = Anil Radhakrishnan
 author_email = aradhak5@ncsu.edu
 copyright = 2023 onwards, Anil Radhakrishnan
 description = jax implementation for metalearning neuronal diversity
-keywords = nbdev jupyter notebook python
+keywords = nbdev jupyter notebook python metalearning neural networks
 language = English
 status = 3
 user = NonlinearArtificialIntelligenceLab
-requirements = nbdev jax jaxlib optax equinox fastcore matplotlib pandas torch seaborn tqdm black
+requirements = jax jaxlib optax equinox fastcore torch tqdm black jupyter ipywidgets 
 console_scripts = nbdev_export=nbdev.cli:nbdev_export
 readme_nb = index.ipynb
 allowed_metadata_keys = 
