--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-equinox=0.10.6
-fastcore=1.5.29
-jax=0.4.13
-jaxlib=0.4.12
-matplotlib=3.7.1
-nbdev=2.3.12
-numpy=1.25.0
-optax=0.1.5
-pandas=1.5.3
-pytorch=2.0.1
-seaborn=0.12.2
-tqdm=4.65.0
+equinox==0.10.10
+jax==0.4.13
+numpy==1.25.1
+optax==0.1.5
+setuptools==67.8.0
+torch==2.0.1
+tqdm==4.65.0
